# InvesTutor-RAG

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  chatbot_app.py  pyproject.toml  requirements.txt
assets/: README.md  Workflow.drawio
investutor/: chatbot_app.py
investutor/scripts/: host_models.py  test_latency.py  test_pipeline.py  test_system.py
investutor/utils/: converter_utils.py  ingestion.py  model_utils.py  news_api_integration.py  news_integration.py  retrieval_utils.py  server.py  web_search.py
utils/: ingestion.py  model_utils.py  news_integration.py  retrieval.py  server.py  test_system.py
