[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "investutor"
version = "0.1.1"
description = "An AI-powered investment education platform with RAG capabilities"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "beautifulsoup4",
    "cohere",
    "deepeval",
    "fastapi",
    "google-api-python-client",
    "langchain",
    "langchain-milvus",
    "langchain-openai",
    "langchain-pinecone",
    "langchain-community",
    "langchain-text-splitters",
    "mammoth",
    "markdownify",
    "newsapi-python",
    "openai",
    "pinecone",
    "pydantic",
    "pypdf",
    "pymilvus",
    "python-dotenv",
    "requests",
    "semantic-chunkers",
    "sentence-transformers[cross-encoder]",
    "streamlit",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["investutor"]